src/test/resources/semantic/sentences/error/TC_ERROR_ASIGNATION3.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 10 | COLUMNA 10 | Se esperaba una variable de tipo Char y se encontro una de tipo Int. |
struct A{
    Char a;
}

impl A{
    .(){
        a=1;
    }
}

start{
}
